<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="step"
            type="com.artpropp.bakingapp.model.Step" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".StepFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/video_card_view"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/player_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/description_card_view"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_card_padding"
                android:text="@{step.description}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Description" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card_view"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:padding="@dimen/small_card_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:contentDescription="@string/step_image"
                app:imageUrl="@{step.thumbnailURL}" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>
